--- a/templates/component.mustache
+++ b/templates/component.mustache
@@ -31,7 +31,7 @@ describe("{{ componentName }}", function() {
         })
     );
 
-    it("should open when the button is clicked", function() {
+    it("should be defined", function() {
         const $scope = $rootScope.$new(true);
         $scope.values = ["item1", "item2"];
 
